# sinkingfund-ui

./: .gitignore  STYLE_GUIDE.md  pyproject.toml  requirements.txt
assets/styles/: custom.css
sinkingfund_ui/: __init__.py  main.py
sinkingfund_ui/components/: __init__.py  figures.py  tables.py
sinkingfund_ui/components/forms/: __init__.py  bill_management.py  fund_setup.py  strategy.py
sinkingfund_ui/config/: __init__.py  custom.css  settings.py
sinkingfund_ui/pages/: __init__.py
sinkingfund_ui/utils/: report_utils.py
tests/: __init__.py
tests/fixtures/: invalid_bills.csv  sample_bills.csv  sample_bills.json  sample_bills.xlsx
tests/integration/: __init__.py  conftest.py  test_bill_management.py  test_file_loading.py  test_quick_report.py  test_schedule_visualization.py  test_strategy_selection.py  test_workflow_reruns.py
tests/unit/: __init__.py  conftest.py  test_figures.py  test_forms.py  test_proportional_method.py  test_strategy_forms.py  test_tables.py  test_visualizations.py
